2002-02-10  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/generic/glob.c (glob): Explicitly set gl_pathc to zero
	after globfree() calls.

	* elf/dl-deps.c (struct openaux_args): Add open_mode element.
	(openaux): Pass open_mode as new last argument to _dl_map_object.
	(_dl_map_object_deps): Add new argument open_mode.  Initialize
	open_mode element of args variable with it.
	* elf/dl-open.c (dl_open_worker): Pass __RTLD_DLOPEN flag is set to
	_dl_map_object_deps.
	* elf/rtld.c (dl_main): Add zero as last parameter to
	_dl_map_object_deps call.
	* sysdeps/generic/ldsodefs.h: Adjust prototype of _dl_map_object_deps.
	* elf/nodlopen2.c: New file.
	* elf/nodlopenmod2.c: New file.
	* elf/Makefile: Add rules to build and run nodlopen2.

	* elf/tst-tls1.c: Move TLS helper macros to...
	* elf/tls-macros.hgg: ...here.  New file.
	* elf/tst-tls2.c: New file.
	* elf/Makefile (tests): Add tst-tls2.
	(distribute): Add tls-macros.h.

	* po/sv.po: Update from translation team.

	* elf/tst-tls1.c (main): Add complete set of tests.  Split
	architecture specific definitions from the actual test code.

	* po/tr.po: Update from translation team.

2002-02-09  Ulrich Drepper  <drepper@redhat.com>

	* elf/Makefile (tests): Add tst-tls1.
	* elf/tst-tls1.c: New file.

	* sysdeps/generic/dl-tls.c (_dl_determine_tlsoffset): Don't handle
	alignment of TCB for now.

	* elf/rtld.c (dl_main): Use p_vaddr as address of TLS
	initialization image for the application itself.

	* sysdeps/generic/dl-tls.c (_dl_allocate_tls): Correctly terminate
	loop to initialize TLS block.

2002-02-08  Richard Henderson  <rth@redhat.com>

	* sysdeps/generic/ldsodefs.h (struct rtld_global): Also include
	_dl_cpuclock_offset if HP_SMALL_TIMING_AVAIL.

	* sysdeps/alpha/elf/initfini.c: Use \n\ for multiline string.

2002-02-09  Jakub Jelinek  <jakub@redhat.com>

	* sysdeps/generic/dl-environ.c (unsetenv): Clear cnt before use.

2002-02-08  Ulrich Drepper  <drepper@redhat.com>
